// This is your Prisma schema file,
// you can find out more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

model User {
  id              Int             @id @default(autoincrement())
  email           String          @unique
  fullname        String          @default("User")
  password        String
  role            Role            @default(CUSTOMER)
  orders          Order[]
  profile         Profile?
  billingInvoices BillingInvoice[]
  suspensionHistory SuspensionHistory[]
  packageHistory  PackageHistory[]
  assignedTickets Ticket[]        @relation("AssignedTickets")
  memberTickets   TicketMember[]
  ticketHistory   TicketHistory[] @relation("TicketHistoryActor")
  createdAt       DateTime        @default(now())
  updatedAt       DateTime        @updatedAt
}

model Profile {
  id           Int     @id @default(autoincrement())
  user_id      Int     @unique
  user         User    @relation(fields: [user_id], references: [id])
  phone_number String
  image_url    String?
  full_address String
  province     String
  city         String
  district     String
  subdistrict  String
  latitude     Float?
  longitude    Float?

  // -- Kolom baru untuk integrasi MikroTik --
  routerId    Int? // Router mana yang akan digunakan user ini
  router      Router? @relation(fields: [routerId], references: [id])
  pppUsername String? @unique // Username untuk PPP Secret
  pppPassword String? // Password untuk PPP Secret
  pppProfile  String? // Profil/paket PPP (e.g., 'Paket-10Mbps')
  isPppActive Boolean @default(true)
}

model TokenBlacklist {
  id        Int      @id @default(autoincrement())
  token     String   @unique
  createdAt DateTime @default(now())
}

enum Role {
  CUSTOMER
  TECHNICIAN
  TECH_ADMIN
  SUPER_ADMIN
}

enum Status {
  PENDING_REVIEW
  REVIEW_APPROVED
  REVIEW_REJECTED
  SURVEY_SCHEDULED
  SURVEY_COMPLETED
  WAITING_FOR_ASSIGNMENT
  TECHNICIAN_ASSIGNED
  INSTALLATION_IN_PROGRESS
  COMPLETED
  CANCELLED
}

enum TicketStatus {
  OPEN
  SCHEDULED
  IN_PROGRESS
  RESOLVED
  CLOSED
}

enum TicketPaymentStatus {
  PENDING_PAYMENT
  PAID
  EXPIRED
}

enum TicketHistoryActor {
  SYSTEM
  ADMIN
  TECHNICIAN
  CUSTOMER
}

enum BillingStatus {
  PAID
  UNPAID
  OVERDUE
}

model CategoryPackage {
  id        Int       @id @default(autoincrement())
  name      String    @unique
  packages  Package[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}

model Package {
  id            Int             @id @default(autoincrement())
  name          String
  price         Float
  downloadSpeed Float           @default(0.0)
  uploadSpeed   Float           @default(0.0)
  isPopular     Boolean         @default(false)
  description   String
  metadata      Json?
  category      CategoryPackage @relation(fields: [categoryId], references: [id])
  categoryId    Int
  orderItems    OrderItem[]
  packageHistory PackageHistory[]
  createdAt     DateTime        @default(now())
  updatedAt     DateTime        @updatedAt
}

model InventoryCategory {
  id        Int             @id @default(autoincrement())
  name      String          @unique
  items     InventoryItem[]
  createdAt DateTime        @default(now())
  updatedAt DateTime        @updatedAt
}

model InventoryItem {
  id         Int               @id @default(autoincrement())
  name       String
  stock      Int               @default(0)
  unit       String
  category   InventoryCategory @relation(fields: [categoryId], references: [id])
  categoryId Int
  createdAt  DateTime          @default(now())
  updatedAt  DateTime          @updatedAt
}

model Order {
  id                    Int         @id @default(autoincrement())
  user                  User        @relation(fields: [userId], references: [id])
  userId                Int
  status                Status      @default(PENDING_REVIEW)
  total                 Float
  items                 OrderItem[]
  tickets               Ticket[]
  // Payment fields for Midtrans
  midtransTransactionId String?     @unique
  midtransOrderId       String?     @unique
  redirectUrl           String? // Redirect URL dari Midtrans
  // Admin review fields
  reviewedBy            Int? // User ID dari admin yang review
  reviewNotes           String? // Catatan dari admin
  reviewedAt            DateTime?
  createdAt             DateTime    @default(now())
  updatedAt             DateTime    @updatedAt
}

model OrderItem {
  id        Int     @id @default(autoincrement())
  order     Order   @relation(fields: [orderId], references: [id])
  orderId   Int
  package   Package @relation(fields: [packageId], references: [id])
  packageId Int
}

model Ticket {
  id            Int                 @id @default(autoincrement())
  order         Order               @relation(fields: [orderId], references: [id])
  orderId       Int
  technician    User?               @relation("AssignedTickets", fields: [technicianId], references: [id])
  technicianId  Int?
  members       TicketMember[]
  status        TicketStatus        @default(OPEN)
  paymentStatus TicketPaymentStatus @default(PENDING_PAYMENT)
  expiresAt     DateTime?
  expiredAt     DateTime?
  paidAt        DateTime?
  title         String
  description   String?
  category      TicketCategory?     @relation(fields: [categoryId], references: [id])
  categoryId    Int?
  history       TicketHistory[]
  attachments   TicketAttachment[]
  scheduledAt   DateTime?
  surveyRecord  TicketSurvey?       @relation("SurveyTicket")
  installationSurvey TicketSurvey?  @relation("InstallationTicket")
  createdAt     DateTime            @default(now())
  updatedAt     DateTime            @updatedAt
}

model TicketCategory {
  id          Int      @id @default(autoincrement())
  name        String   @unique
  isExpirable Boolean  @default(false)
  expireHours Int?
  requiresTechnician Boolean @default(false)
  tickets     Ticket[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model TicketHistory {
  id          Int                @id @default(autoincrement())
  ticket      Ticket             @relation(fields: [ticketId], references: [id], onDelete: Cascade)
  ticketId    Int
  action      String
  description String?
  actorType   TicketHistoryActor @default(SYSTEM)
  actor       User?              @relation("TicketHistoryActor", fields: [actorId], references: [id])
  actorId     Int?
  createdAt   DateTime           @default(now())
}

model TicketAttachment {
  id        Int      @id @default(autoincrement())
  ticket    Ticket   @relation(fields: [ticketId], references: [id], onDelete: Cascade)
  ticketId  Int
  filename  String
  mimeType  String
  dataUrl   String
  createdAt DateTime @default(now())
}

model TicketMember {
  id           Int      @id @default(autoincrement())
  ticket       Ticket   @relation(fields: [ticketId], references: [id], onDelete: Cascade)
  ticketId     Int
  technician   User     @relation(fields: [technicianId], references: [id])
  technicianId Int
  createdAt    DateTime @default(now())

  @@unique([ticketId, technicianId])
}

model TicketSurvey {
  id                   Int      @id @default(autoincrement())
  surveyTicket         Ticket   @relation("SurveyTicket", fields: [surveyTicketId], references: [id])
  surveyTicketId       Int      @unique
  installationTicket   Ticket?  @relation("InstallationTicket", fields: [installationTicketId], references: [id])
  installationTicketId Int?     @unique
  plannedItems         Json
  actualItems          Json?
  notes                String?
  createdAt            DateTime @default(now())
  updatedAt            DateTime @updatedAt
}

model BillingInvoice {
  id          Int           @id @default(autoincrement())
  user        User          @relation(fields: [userId], references: [id])
  userId      Int
  amount      Float
  periodStart DateTime
  periodEnd   DateTime
  status      BillingStatus @default(UNPAID)
  dueAt       DateTime
  paidAt      DateTime?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
}

model BillingSetting {
  id                Int      @id @default(1)
  automationEnabled Boolean  @default(false)
  suspendCron       String   @default("0 * * * *")
  renewCron         String   @default("10 0 1 * *")
  graceDays         Int      @default(3)
  dueDays           Int      @default(7)
  periodDays        Int      @default(30)
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt
}

model AppSetting {
  id        Int      @id @default(autoincrement())
  key       String   @unique
  value     String
  group     String
  type      String
  isSecret  Boolean  @default(false)
  updatedBy Int?
  updatedAt DateTime @updatedAt
  createdAt DateTime @default(now())
}

model SuspensionHistory {
  id          Int      @id @default(autoincrement())
  user        User     @relation(fields: [userId], references: [id])
  userId      Int
  reason      String
  suspendedAt DateTime
  resumedAt   DateTime?
  createdAt   DateTime @default(now())
}

model PackageHistory {
  id        Int      @id @default(autoincrement())
  user      User     @relation(fields: [userId], references: [id])
  userId    Int
  package   Package  @relation(fields: [packageId], references: [id])
  packageId Int
  startedAt DateTime
  endedAt   DateTime?
  reason    String?
  createdAt DateTime @default(now())
}

model CoveredArea {
  id          Int                       @id @default(autoincrement())
  province    String
  city        String // City or Regency
  district    String
  village     String // Village or Sub-district
  fullAddress String?
  radius_m    Int?                      @default(10000) // radius dalam meter (default 10 km)
  center      Unsupported("geography")? // geography(Point, 4326)
  createdAt   DateTime                  @default(now())

  @@unique([province, city, district, village], name: "unique_area_constraint")
}

model CoverageCheckHistory {
  id           Int                       @id @default(autoincrement())
  fullAddress  String
  province     String
  city         String
  district     String
  village      String
  userLocation Unsupported("geography")? // geography(Point, 4326)
  isCovered    Boolean // Mencatat hasil pengecekan
  checkedAt    DateTime                  @default(now())
}

model Router {
  id        Int       @id @default(autoincrement())
  name      String    @unique
  host      String
  user      String
  password  String
  port      Int?      @default(8728) // deprecated
  portApi   Int       @default(8728)
  portSsh   Int       @default(22)
  profiles  Profile[]
  
  // -- Kolom baru untuk default PPP Profile --
  pppLocalAddress  String?
  pppRemoteAddress String?

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}
